--- a/public_html/css/skins/default.css
+++ b/public_html/css/skins/default.css
@@ -2804,6 +2804,7 @@ html[dir="rtl"] #header .tip.skin:before {
 
 #header .header-btn-collapse-nav {
 	background: #005494;
+	margin-top: 30px;
 }
 
 @media (min-width: 992px) {
