--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -30,6 +30,9 @@ li {
 	body {
 		font-size: 13px;
 	}
+	header {
+		min-height: 100px !important;
+	}
 }
 /* Header */
 #header {
@@ -47,7 +50,7 @@ li {
 	transition: min-height 0.3s ease;
 	width: 100%;
 	z-index: 1001;
-	min-height: 125px;
+	min-height: 100px;
 }
 
 #header .container {
@@ -200,7 +203,7 @@ li {
 	-moz-transition: all 0.3s ease;
 	transition: all 0.3s ease;
 	position: relative;
-	margin: 10px 15px 15px 0;
+	margin: -5px 15px 15px 0;
 	top: 0;
 }
 
